# todo-miniprogram

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: cde451d1bf40_add_user_model_and_todo_user_.py
app/api/: __init__.py
app/api/routes/: todos.py
app/core/: config.py  database.py
app/models/: __init__.py  todo.py  user.py
app/services/: wechat.py
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: auth.py  todos.py
backend/app/core/: auth.py  database.py
backend/app/models/: todo.py
backend/app/services/: __init__.py
frontend/: .gitignore  README.md  app.js  app.json  package-lock.json  project.config.json  project.private.config.json
frontend/api/: todo.js  user.js
frontend/config/: index.js
frontend/pages/index/: index.js  index.json  index.wxml  index.wxss
frontend/pages/more/: index.js  index.json  index.wxml  index.wxss
frontend/utils/: request.js  util.js
