[project]
name = "saveflow-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "ruff>=0.11.13",
]
